// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Intro] Interaction should login when button has clicked 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        disabled={true}
        loading={true}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#FFFFFF",
              "borderLeftColor": "#FFFFFF",
              "borderRightColor": "#FFFFFF",
              "borderTopColor": "#FFFFFF",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                Object {
                  "height": undefined,
                  "width": undefined,
                },
                false,
                Object {
                  "borderBottomColor": "#C4C4C4",
                  "borderLeftColor": "#C4C4C4",
                  "borderRightColor": "#C4C4C4",
                  "borderTopColor": "#C4C4C4",
                },
              ],
            ],
          ]
        }
        testID="loading-view"
        type="primary"
      >
        <ActivityIndicator
          color="#EDEDED"
          size="small"
        />
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#000000",
              "borderLeftColor": "#000000",
              "borderRightColor": "#000000",
              "borderTopColor": "#000000",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#000000",
              "borderLeftColor": "#000000",
              "borderRightColor": "#000000",
              "borderTopColor": "#000000",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change Theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [Dark] theme 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#000000",
              "borderLeftColor": "#000000",
              "borderRightColor": "#000000",
              "borderTopColor": "#000000",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Sign In
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#000000",
              "borderLeftColor": "#000000",
              "borderRightColor": "#000000",
              "borderTopColor": "#000000",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#000000",
              "borderLeftColor": "#000000",
              "borderRightColor": "#000000",
              "borderTopColor": "#000000",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change Theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isDisabled] status 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#232323",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "accent": "#8A96DC",
            "contrast": "#000000",
            "default": "#FFFFFF",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#E0E0E0",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#D3D8E8",
            "validation": "#FF002E",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "accent": "#8A96DC",
            "contrast": "#000000",
            "default": "#FFFFFF",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#E0E0E0",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#D3D8E8",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "accent": "#8A96DC",
            "contrast": "#000000",
            "default": "#FFFFFF",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#E0E0E0",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#D3D8E8",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#FFFFFF",
              "borderLeftColor": "#FFFFFF",
              "borderRightColor": "#FFFFFF",
              "borderTopColor": "#FFFFFF",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#000000",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Sign In
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#FFFFFF",
              "borderLeftColor": "#FFFFFF",
              "borderRightColor": "#FFFFFF",
              "borderTopColor": "#FFFFFF",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#000000",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#FFFFFF",
              "borderLeftColor": "#FFFFFF",
              "borderRightColor": "#FFFFFF",
              "borderTopColor": "#FFFFFF",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#000000",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change Theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isLoading] status 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#232323",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "accent": "#8A96DC",
            "contrast": "#000000",
            "default": "#FFFFFF",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#E0E0E0",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#D3D8E8",
            "validation": "#FF002E",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "accent": "#8A96DC",
            "contrast": "#000000",
            "default": "#FFFFFF",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#E0E0E0",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#D3D8E8",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "D",
            "2": "3",
            "3": "D",
            "4": "8",
            "5": "E",
            "6": "8",
            "accent": "#8A96DC",
            "contrast": "#000000",
            "default": "#FFFFFF",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#E0E0E0",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#D3D8E8",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#FFFFFF",
              "borderLeftColor": "#FFFFFF",
              "borderRightColor": "#FFFFFF",
              "borderTopColor": "#FFFFFF",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#000000",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Sign In
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#FFFFFF",
              "borderLeftColor": "#FFFFFF",
              "borderRightColor": "#FFFFFF",
              "borderTopColor": "#FFFFFF",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#000000",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#FFFFFF",
              "borderLeftColor": "#FFFFFF",
              "borderRightColor": "#FFFFFF",
              "borderTopColor": "#FFFFFF",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#000000",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change Theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render outer component and snapshot matches 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "0": "#",
            "1": "0",
            "2": "0",
            "3": "0",
            "4": "0",
            "5": "0",
            "6": "0",
            "accent": "#B446BF",
            "contrast": "#FFFFFF",
            "default": "#000000",
            "disabled": "#C4C4C4",
            "fontSize": 18,
            "lineHeight": 27,
            "link": "#393D7A",
            "placeholder": "#6D6D6D",
            "primary": "#000000",
            "secondary": "#404040",
            "validation": "#FF002E",
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "75%",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-login"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#000000",
              "borderLeftColor": "#000000",
              "borderRightColor": "#000000",
              "borderTopColor": "#000000",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Image
          source={
            Object {
              "createTransformer": [Function],
            }
          }
          style={
            Object {
              "height": 24,
              "left": 12,
              "position": "absolute",
              "width": 24,
            }
          }
        />
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Sign In
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-navigate"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#000000",
              "borderLeftColor": "#000000",
              "borderRightColor": "#000000",
              "borderTopColor": "#000000",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Navigate
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="btn-theme"
    >
      <View
        onLayout={[Function]}
        outlined={false}
        style={
          Array [
            Object {
              "backgroundColor": "#000000",
              "borderBottomColor": "#000000",
              "borderLeftColor": "#000000",
              "borderRightColor": "#000000",
              "borderTopColor": "#000000",
            },
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": 20,
                "borderBottomRightRadius": 20,
                "borderTopLeftRadius": 20,
                "borderTopRightRadius": 20,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingRight": 20,
                "paddingTop": 10,
              },
              Array [
                undefined,
                false,
                undefined,
              ],
            ],
          ]
        }
        testID="button-container"
        type="primary"
      >
        <Text
          outlined={false}
          style={
            Array [
              Object {
                "color": "#FFFFFF",
              },
              Array [
                undefined,
                undefined,
              ],
            ]
          }
          type="primary"
        >
          Change Theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;
